--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene que el principal motor del ser humano es la búsqueda de sentido, más allá del placer o la evitación del dolor. Ayuda a descubrir propósito incluso en la adversidad y enseña que, aunque no siempre podamos cambiar las circunstancias, sí podemos elegir nuestra actitud y responder con responsabilidad. Su objetivo no es eliminar el sufrimiento, sino encontrar significado en él, fortaleciendo la dignidad, la esperanza y la capacidad de trascender para vivir una vida más plena y con dirección
                     </p>
 <p class="text-lg text-white leading-relaxed medium">
-                        Este curso introductorio es una brújula práctica para quienes buscan respuestas profundas sin necesidad de ser psicólogos.
+                        Este CURSO INTRODUCTORIO es una brújula práctica para quienes buscan respuestas profundas sin necesidad de ser psicólogos.
                     </p>
 </div>
 <div class="space-y-4 pt-4">
@@ -423,9 +423,9 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
 <div id="chat-widget" class="fixed bottom-24 right-8 z-[60] hidden transition-all duration-300 transform scale-95 opacity-0">
 <div class="bg-white w-80 md:w-96 rounded-3xl shadow-2xl border border-slate-100 overflow-hidden font-['Inter']">
 <div class="bg-[#0f3a85] p-5 text-white flex items-center gap-3">
-<img src="asesora.png" alt="Ana" class="w-10 h-10 rounded-full border-2 border-[#19a39a] bg-white object-cover">
+<img src="asesor.png" alt="Ana" class="w-10 h-10 rounded-full border-2 border-[#19a39a] bg-white object-cover">
 <div>
-<p class="font-bold text-sm leading-tight">Ana</p>
+<p class="font-bold text-sm leading-tight">Franky</p>
 <p class="text-[9px] opacity-70 uppercase tracking-wider">Instituto de Logoterapia</p>
 </div>
 </div>
@@ -443,7 +443,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
 </div>
 <button onclick="toggleChat()" class="fixed bottom-8 right-8 w-14 h-14 z-[60] hover:scale-110 active:scale-95 transition-all focus:outline-none">
 <div class="relative w-full h-full">
-<img src="asesora.png" alt="Abrir Chat" class="w-full h-full rounded-full shadow-xl border-2 border-[#19a39a] bg-white object-cover">
+<img src="asesor.png" alt="Abrir Chat" class="w-full h-full rounded-full shadow-xl border-2 border-[#19a39a] bg-white object-cover">
 <span class="absolute top-0 right-0 flex h-3 w-3">
 <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-[#19a39a] opacity-75"></span>
 <span class="relative inline-flex rounded-full h-3 w-3 bg-[#19a39a]"></span>
@@ -474,7 +474,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
                 
                 if (!chatIniciado) {
                     setTimeout(() => {
-                        enviarMensajeBot(`¡Hola! Soy Ana. El curso con el <strong>${CONFIG.psicologo}</strong> es el <strong>${CONFIG.fecha}</strong> y dura <strong>${CONFIG.duracion}</strong>.<br><br>¿Buscas herramientas para tu crecimiento personal o te interesa la formación profesional?`);
+                        enviarMensajeBot(`¡Hola! Soy Franky. El curso con el <strong>${CONFIG.psicologo}</strong> es el <strong>${CONFIG.fecha}</strong> y dura <strong>${CONFIG.duracion}</strong>.<br><br>¿Buscas herramientas para tu crecimiento personal o te interesa la formación profesional?`);
                     }, 400);
                     chatIniciado = true;
                 }
@@ -538,6 +538,7 @@ Creada por Viktor Frankl, es un enfoque de psicoterapia existencial que sostiene
     </script>
 </body>
 </html>
+
 
 
 
